--- a/app/templates/shipping_request.html
+++ b/app/templates/shipping_request.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %}
+<html>
+
+<head>
+  <title>Shipping Request</title>
+</head>
 
 {% block content %}
 <form method="post" action="{{ url_for('.new_package') }}">
@@ -16,3 +20,5 @@
   </div>
 </form>
 {% endblock %}
+
+</html>
